kubernetes/apps/network/external-services/crul/ingress.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone-strict/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app crul
  annotations:
    hajimari.io/group: Observability
  labels:
    app.kubernetes.io/instance: *app
    app.kubernetes.io/name: *app
spec:
  ingressClassName: internal
  rules:
    - host: "crul.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: *app
                port:
                  name: http
            path: /
            pathType: Prefix
